Added support for PECL packages.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -51,6 +51,16 @@ aspects_php_config:
     name: "disable_functions"
     value: "apache_child_terminate,apache_setenv,define_syslog_variables,escapeshellarg,escapeshellcmd,eval,exec,fp,fput,ftp_connect,ftp_exec,ftp_get,ftp_login,ftp_nb_fput,ftp_put,ftp_raw,ftp_rawlist,highlight_file,ini_alter,ini_get_all,ini_restore,inject_code,mysql_pconnect,passthru,php_uname,phpAds_remoteInfo,phpAds_XmlRpc,phpAds_xmlrpcDecode,phpAds_xmlrpcEncode,popen,posix_getpwuid,posix_kill,posix_mkfifo,posix_setpgid,posix_setsid,posix_setuid,posix_setuid,posix_uname,proc_close,proc_get_status,proc_nice,proc_open,proc_terminate,shell_exec,system,xmlrpc_entity_decode,pcntl_alarm,pcntl_fork,pcntl_waitpid,pcntl_wait,pcntl_wifexited,pcntl_wifstopped,pcntl_wifsignaled,pcntl_wexitstatus,pcntl_wtermsig,pcntl_wstopsig,pcntl_signal,pcntl_signal_dispatch,pcntl_get_last_error,pcntl_strerror,pcntl_sigprocmask,pcntl_sigwaitinfo,pcntl_sigtimedwait,pcntl_exec,pcntl_getpriority,pcntl_setpriority,"
 
+# PECL Packages:
+# Find names at: http://pecl.php.net/packages.php
+aspects_php_pecl_packages:
+  uploadprogress:
+    state: "default"
+    name: "uploadprogress"
+    linecreated:
+      Debian: "/usr/lib64/php/modules/uploadprogress.so"
+      RedHat: "/usr/lib/php5/20090626/uploadprogress.so"
+
 # PHP Packages
 aspects_php_packages:
   php5:
