--- a/tasks/installPackages.yml
+++ b/tasks/installPackages.yml
@@ -2,8 +2,8 @@
 # Install Apache Packages.
 - name: RedHat - Enable EPEL repository
   when: ansible_os_family == "RedHat"
-  yum: 
-    name: epel-release 
+  yum:
+    name: epel-release
     state: present
   tags:
     - aspects_php
@@ -11,10 +11,10 @@
 
 - name: Debian - Install python-apt for use with ansible apt modules.
   when: ansible_os_family == "Debian" or ansible_os_family == "Linuxmint"
-  apt: 
-    pkg: python-apt 
-    state: present 
-    update_cache: "yes" 
+  apt:
+    pkg: python-apt
+    state: present
+    update_cache: "yes"
     cache_valid_time: "86400"
   tags:
     - aspects_php
@@ -22,8 +22,8 @@
 
 - name: Debian - install pip
   when: ansible_os_family == "Debian" or ansible_os_family == "Linuxmint"
-  apt: 
-    pkg: "python-pip" 
+  apt:
+    pkg: "python-pip"
     state: "present"
   tags:
     - aspects_php
@@ -31,8 +31,8 @@
 
 - name: RedHat - install pip
   when: ansible_os_family == "RedHat"
-  yum: 
-    name: "python-pip" 
+  yum:
+    name: "python-pip"
     state: "present"
   tags:
     - aspects_php
@@ -42,8 +42,8 @@
   when:
     ansible_os_family == "Debian" or
     ansible_os_family == "RedHat"
-  pip: 
-    state: "present" 
+  pip:
+    state: "present"
     name: "ConfigParser"
   tags:
     - aspects_php
@@ -52,7 +52,7 @@
 - name: Debian - Install libapache2-mod-php5 package with apt
   when:
     (ansible_os_family == "Debian" or ansible_os_family == "Linuxmint") and
-    aspects_php_apache_installed
+    aspects_php_apache_installed and ansible_distribution_version != "16.04"
   apt:
     pkg: "libapache2-mod-php5"
     state: "present"
@@ -63,15 +63,47 @@
     - aspects_php_package_install
 
 - name: Debian - Install php packages with apt
-  when: 
+  when:
     (ansible_os_family == "Debian" or ansible_os_family == "Linuxmint") and
-    item.value.state != "default" and 
-    item.value.state != "purged" and 
-    item.value.Debian is defined
-  apt: 
-    pkg: "{{ item.value.Debian }}" 
-    state: "{{ item.value.state }}" 
-    update_cache: "yes" 
+    item.value.state != "default" and
+    item.value.state != "purged" and
+    item.value.Debian is defined and
+    ansible_distribution_version != "16.04"
+  apt:
+    pkg: "{{ item.value.Debian }}"
+    state: "{{ item.value.state }}"
+    update_cache: "yes"
+    cache_valid_time: "86400"
+  with_dict: aspects_php_packages
+  tags:
+    - aspects_php
+    - aspects_php_package_install
+
+- name: Ubuntu 16.04 - Install libapache2-mod-php package with apt
+  when:
+    (ansible_distribution == "Ubuntu" and
+     ansible_distribution_version == "16.04" and
+     aspects_php_apache_installed)
+  apt:
+    pkg: "libapache2-mod-php"
+    state: "present"
+    update_cache: "yes"
+    cache_valid_time: "86400"
+  tags:
+    - aspects_php
+    - aspects_php_package_install
+
+- name: Ubuntu 16.04 - Install php packages with apt
+  when:
+    (ansible_distribution == "Ubuntu" and
+     ansible_distribution_version == "16.04") and
+    item.value.state != "default" and
+    item.value.state != "purged" and
+    item.value.Ubuntu1604 is defined
+  apt:
+    pkg: "{{ item.value.Ubuntu1604 }}"
+    state: "{{ item.value.state }}"
+    update_cache: "yes"
     cache_valid_time: "86400"
   with_dict: aspects_php_packages
   tags:
@@ -79,13 +111,13 @@
     - aspects_php_package_install
 
 - name: RedHat - Install php packages with yum
-  when: 
-    ansible_os_family == "RedHat" and 
-    item.value.state != "default" and 
-    item.value.state != "purged" and 
+  when:
+    ansible_os_family == "RedHat" and
+    item.value.state != "default" and
+    item.value.state != "purged" and
     item.value.RedHat is defined
-  yum: 
-    name: "{{ item.value.RedHat }}" 
+  yum:
+    name: "{{ item.value.RedHat }}"
     state: "{{ item.value.state }}"
   with_dict: aspects_php_packages
   tags:
