--- a/tasks/installPackages.yml
+++ b/tasks/installPackages.yml
@@ -74,7 +74,7 @@
     state: "{{ item.value.state }}"
     update_cache: "yes"
     cache_valid_time: "86400"
-  with_dict: aspects_php_packages
+  with_dict: "{{ aspects_php_packages }}"
   tags:
     - aspects_php
     - aspects_php_package_install
@@ -105,7 +105,7 @@
     state: "{{ item.value.state }}"
     update_cache: "yes"
     cache_valid_time: "86400"
-  with_dict: aspects_php_packages
+  with_dict: "{{ aspects_php_packages }}"
   tags:
     - aspects_php
     - aspects_php_package_install
@@ -119,7 +119,7 @@
   yum:
     name: "{{ item.value.RedHat }}"
     state: "{{ item.value.state }}"
-  with_dict: aspects_php_packages
+  with_dict: "{{ aspects_php_packages }}"
   tags:
     - aspects_php
     - aspects_php_package_install
